fixes button to align right and smaller size

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     grid-template-columns: repeat(1, auto);
     grid-template-rows: 80px auto 300px;
 }
-.logodiv {
+#logodiv {
     display: contents;
 }
 .logo {
@@ -41,6 +41,8 @@ nav {
     
     grid-row: 3/4;
     justify-content: space-evenly;
+    width: 100px;
+    margin-left: auto;
 
 }
 
@@ -59,7 +61,7 @@ nav {
     display: flex;
     align-items: baseline;
     grid-column: 1/3;
-    grid-row: 3/4;
+    grid-row: -1/2
 }
 
 
